<resources>
    <string name="app_name">Phone Book</string>
    <string name="new_contact_activity_name">Add new contact</string>
    <string name="edit_contact_activity_name">Edit contact</string>
    <string name="about_developer_activity_name">About developer</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_last_name">Last name</string>
    <string name="edit_text_hint_phone">Phone</string>
    <string name="edit_text_hint_login">Login</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="error_required_field">This field is required</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_short_last_name">Last name is too short</string>
    <string name="error_short_name">Name is too short</string>
    <string name="error_invalid_login">Invalid login</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="dialog_delete_contact">Contact will be deleted</string>
    <string name="title_change_photo_dialog">Change photo</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sign_in">Sign In</string>
    <string name="snackbar_deleted_contact">Contact was deleted</string>
    <string name="snackbar_permissions">This action requires permissions</string>
    <string name="title_empty_view">You have no contacts</string>
    <string name="text_about">This application is developed by\nOlha Tymoshenko</string>
    <string name="text_phone">Tel\n+380936977364</string>
    <string name="linked_in">LinkedIn\n<a>https://www.linkedin.com/profile/view?id=278141229</a></string>
    <string name="git_hub">GitHub\n<a>https://github.com/OlhaTymoshenko</a></string>
</resources>
