<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_about_developer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ua.com.amicablesoft.phonebook.AboutDeveloperActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/about_developer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/developer_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/photo4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/developed_by_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_about"
                android:textAppearance="@style/AboutTextFont"/>

            <TextView
                android:id="@+id/developer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/text_phone"
                android:textAppearance="@style/InfoTextFont"
                android:autoLink="phone"/>

            <TextView
                android:id="@+id/developer_ln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/linked_in"
                android:textAppearance="@style/InfoTextFont"
                android:autoLink="web"/>

            <TextView
                android:id="@+id/developer_git_hub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/git_hub"
                android:textAppearance="@style/InfoTextFont"
                android:autoLink="web"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
